--- a/BackendTest/package.json
+++ b/BackendTest/package.json
@@ -16,30 +16,36 @@
     "network:setup": "./scripts/network-setup.sh",
     "network:info": "echo 'Your IP:' && ifconfig | grep 'inet ' | grep -v 127.0.0.1"
   },
-  "keywords": ["nodejs", "typescript", "backend"],
+  "keywords": [
+    "nodejs",
+    "typescript",
+    "backend"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
-    "@types/pg": "^8.10.9",
-    "typescript": "^5.3.0",
-    "ts-node": "^10.9.0",
+    "@types/node": "^20.10.0",
+    "@types/pg": "^8.15.5",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.3.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.38.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
-    "dotenv": "^16.3.1",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
     "socket.io": "^4.7.4",
-    "@supabase/supabase-js": "^2.38.4",
-    "pg": "^8.11.3"
+    "typeorm": "^0.3.27"
   }
 }
