--- a/BackendTest/package.json
+++ b/BackendTest/package.json
@@ -38,7 +38,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.38.4",
+    "@types/decimal.js": "^0.0.32",
     "cors": "^2.8.5",
+    "decimal.js": "^10.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
